JumpScript/tests/baselines/reference/parserExportAssignment5.errors.txt
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.jump(2,5): error TS1063: An export assignment cannot be used in a namespace.


==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment5.jump (1 errors) ====
    module M {
        export = A;
        ~~~~~~~~~~~
!!! error TS1063: An export assignment cannot be used in a namespace.
    }